--- a/package.json
+++ b/package.json
@@ -9,10 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@formkit/auto-animate": "^0.8.0",
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.3",
     "next": "13.5.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-awesome-reveal": "^4.2.5",
+    "react-dom": "18.2.0",
+    "react-responsive-carousel": "^3.2.23",
+    "sass": "^1.68.0",
+    "zod": "^3.22.2"
+  },
+  "devDependencies": {
+    "react-icons": "^4.11.0"
   }
 }
