--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "eslint": "8.50.0",
     "eslint-config-next": "13.5.3",
     "next": "13.5.3",
+    "nodemailer": "^6.9.5",
     "react": "18.2.0",
     "react-awesome-reveal": "^4.2.5",
     "react-dom": "18.2.0",
     "react-responsive-carousel": "^3.2.23",
+    "react-spinners": "^0.13.8",
+    "react-toastify": "^9.1.3",
     "sass": "^1.68.0",
     "zod": "^3.22.2"
   },
